Convert to AssertJ - graph structures