@@ -1,13 +1,14 @@
-// TESTY DLA GRAFÓW SKIEROWANYCH
+// Tests: Structure of directed simple graph
 package algolib.graphs;
 
-import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import algolib.tuples.Pair;
+import algolib.tuples.ComparablePair;
 
 public class DirectedSimpleGraphTest
 {
@@ -28,38 +29,38 @@ public class DirectedSimpleGraphTest
     @Test
     public void getVerticesNumber()
     {
+        // when
         int result = testObject.getVerticesNumber();
-
-        Assertions.assertEquals(10, result);
+        // then
+        Assertions.assertThat(result).isEqualTo(10);
     }
 
     @Test
     public void getVertices()
     {
-        Object[] result = testObject.getVertices().toArray();
-
-        Arrays.sort(result);
-
-        Assertions.assertArrayEquals(new Integer[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}, result);
+        // when
+        Collection<Integer> result = testObject.getVertices();
+        // then
+        Assertions.assertThat(result).containsExactlyInAnyOrder(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
     }
 
     @Test
     public void addVertex()
     {
-        Integer[] neighbours = new Integer[]{2, 6};
-        int result = testObject.addVertex(Arrays.asList(neighbours));
-        Object[] resultNeighbours = testObject.getNeighbours(result).toArray();
-
-        Arrays.sort(resultNeighbours);
-
-        Assertions.assertEquals(10, result);
-        Assertions.assertEquals(11, testObject.getVerticesNumber());
-        Assertions.assertArrayEquals(neighbours, resultNeighbours);
+        // given
+        List<Integer> neighbours = List.of(2, 6);
+        // when
+        int result = testObject.addVertex(neighbours);
+        // then
+        Assertions.assertThat(result).isEqualTo(10);
+        Assertions.assertThat(testObject.getVerticesNumber()).isEqualTo(11);
+        Assertions.assertThat(testObject.getNeighbours(result)).hasSameElementsAs(neighbours);
     }
 
     @Test
     public void getEdgesNumber()
     {
+        // given
         testObject.addEdge(7, 7);
         testObject.addEdge(1, 5);
         testObject.addEdge(2, 4);
@@ -68,15 +69,16 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(3, 6);
         testObject.addEdge(9, 3);
         testObject.addEdge(8, 0);
-
+        // when
         int result = testObject.getEdgesNumber();
-
-        Assertions.assertEquals(7, result);
+        // then
+        Assertions.assertThat(result).isEqualTo(7);
     }
 
     @Test
     public void getEdges()
     {
+        // given
         testObject.addEdge(7, 7);
         testObject.addEdge(1, 5);
         testObject.addEdge(2, 4);
@@ -85,37 +87,33 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(3, 6);
         testObject.addEdge(9, 3);
         testObject.addEdge(8, 0);
-
-        Object[] result = testObject.getEdges().toArray();
-
-        Arrays.sort(result);
-
-        Assertions.assertArrayEquals(
-                new Object[]{Pair.of(1, 5), Pair.of(2, 4), Pair.of(3, 6), Pair.of(6, 3),
-                             Pair.of(7, 7), Pair.of(8, 0), Pair.of(9, 3)}, result);
+        // when
+        Collection<ComparablePair<Integer, Integer>> result = testObject.getEdges();
+        // then
+        Assertions.assertThat(result)
+                  .containsExactlyInAnyOrder(ComparablePair.of(1, 5), ComparablePair.of(2, 4),
+                                             ComparablePair.of(3, 6), ComparablePair.of(6, 3),
+                                             ComparablePair.of(7, 7), ComparablePair.of(8, 0),
+                                             ComparablePair.of(9, 3));
     }
 
     @Test
     public void addEdge()
     {
+        // when
         testObject.addEdge(1, 5);
         testObject.addEdge(1, 5);
         testObject.addEdge(1, 1);
-
-        Object[] neighbours1 = testObject.getNeighbours(1).toArray();
-        Object[] neighbours5 = testObject.getNeighbours(5).toArray();
-
-        Arrays.sort(neighbours1);
-        Arrays.sort(neighbours5);
-
-        Assertions.assertEquals(2, testObject.getEdgesNumber());
-        Assertions.assertArrayEquals(new Integer[]{1, 5}, neighbours1);
-        Assertions.assertArrayEquals(new Integer[]{}, neighbours5);
+        // then
+        Assertions.assertThat(testObject.getEdgesNumber()).isEqualTo(2);
+        Assertions.assertThat(testObject.getNeighbours(1)).containsExactlyInAnyOrder(1, 5);
+        Assertions.assertThat(testObject.getNeighbours(5)).isEmpty();
     }
 
     @Test
     public void getNeighbours()
     {
+        // given
         testObject.addEdge(1, 1);
         testObject.addEdge(1, 3);
         testObject.addEdge(1, 4);
@@ -123,17 +121,16 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(1, 9);
         testObject.addEdge(2, 1);
         testObject.addEdge(6, 1);
-
-        Object[] result = testObject.getNeighbours(1).toArray();
-
-        Arrays.sort(result);
-
-        Assertions.assertArrayEquals(new Integer[]{1, 3, 4, 7, 9}, result);
+        // when
+        Collection<Integer> result = testObject.getNeighbours(1);
+        // then
+        Assertions.assertThat(result).containsExactlyInAnyOrder(1, 3, 4, 7, 9);
     }
 
     @Test
     public void getOutdegree()
     {
+        // given
         testObject.addEdge(1, 1);
         testObject.addEdge(1, 3);
         testObject.addEdge(1, 4);
@@ -141,15 +138,16 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(1, 9);
         testObject.addEdge(2, 1);
         testObject.addEdge(6, 1);
-
+        // when
         int result = testObject.getOutdegree(1);
-
-        Assertions.assertEquals(5, result);
+        // then
+        Assertions.assertThat(result).isEqualTo(5);
     }
 
     @Test
     public void getIndegree()
     {
+        // given
         testObject.addEdge(1, 1);
         testObject.addEdge(3, 1);
         testObject.addEdge(4, 1);
@@ -157,15 +155,16 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(9, 1);
         testObject.addEdge(1, 2);
         testObject.addEdge(1, 6);
-
+        // when
         int result = testObject.getIndegree(1);
-
-        Assertions.assertEquals(5, result);
+        // then
+        Assertions.assertThat(result).isEqualTo(5);
     }
 
     @Test
     public void reverse()
     {
+        // given
         testObject.addEdge(1, 2);
         testObject.addEdge(3, 5);
         testObject.addEdge(4, 9);
@@ -176,16 +175,16 @@ public class DirectedSimpleGraphTest
         testObject.addEdge(7, 8);
         testObject.addEdge(9, 1);
         testObject.addEdge(9, 6);
-
+        // when
         testObject.reverse();
+        // then
+        Collection<ComparablePair<Integer, Integer>> result = testObject.getEdges();
 
-        Object[] result = testObject.getEdges().toArray();
-
-        Arrays.sort(result);
-
-        Assertions.assertArrayEquals(
-                new Object[]{Pair.of(1, 9), Pair.of(2, 1), Pair.of(2, 6), Pair.of(4, 5),
-                             Pair.of(5, 3), Pair.of(6, 6), Pair.of(6, 9), Pair.of(7, 5),
-                             Pair.of(8, 7), Pair.of(9, 4)}, result);
+        Assertions.assertThat(result)
+                  .containsExactlyInAnyOrder(ComparablePair.of(1, 9), ComparablePair.of(2, 1),
+                                             ComparablePair.of(2, 6), ComparablePair.of(4, 5),
+                                             ComparablePair.of(5, 3), ComparablePair.of(6, 6),
+                                             ComparablePair.of(6, 9), ComparablePair.of(7, 5),
+                                             ComparablePair.of(8, 7), ComparablePair.of(9, 4));
     }
 }
